--- a/web-src/css/includes/_variables.scss
+++ b/web-src/css/includes/_variables.scss
@@ -1,17 +1,17 @@
 // Main
 
-$theme-primary: #121212;
-$theme-secondary: #272727;
+$theme-primary: #3A606E;
+$theme-secondary: #60787D;
 
 $text-colour: #FFFFFF;
 
 // Navigation elements
 
 $nav-text-colour: #FFFFFF;
-$nav-background-colour: $theme-primary;
+$nav-background-colour: #828E82;
 
 // Cards
 
 $card-text-color: #FFFFFF;
-$card-background-color: lighten($theme-primary, 5%);
+$card-background-color: lighten($theme-primary, 10%);
 $card-footer-border: $theme-secondary;
