--- a/web-src/css/new-post.scss
+++ b/web-src/css/new-post.scss
@@ -1,29 +1,41 @@
 @import "includes/mixins";
 @import "includes/variables";
 
+div.input.text, div.input.textarea {
+    display: flex;
+    flex-direction: column;
+}
+
 form {
     div.post-meta {
         display: flex;
         flex-direction: column;
 
+        flex-wrap: wrap;
 
         @include sm {
             flex-direction: row;
         }
 
         div {
-            margin: 10px;
-
             &.post-thumbnail {
                 flex-grow: 1;
-                img {
-                    //width: 100%;
-                    max-width: 100%;
-                    max-height: 300px;
 
-                    /*@include sm {
+                padding-right: 10px;
+
+
+                @include sm {
+                    max-width: 400px;
+                }
+
+                img {
+                    width: 100%;
+                    max-width: 100%;
+
+                    @include sm {
                         max-width: 480px;
-                    }*/
+                        max-height: 300px;
+                    }
                 }
             }
 
@@ -34,4 +46,9 @@ form {
             }
         }
     }
+
+    div.post-body {
+
+    }
+
 }
