--- a/webroot/css/admin.css
+++ b/webroot/css/admin.css
@@ -91,9 +91,11 @@
   color: rgba(255, 255, 255, 0.3); }
 
 body {
+  font-family: 'Roboto', sans-serif;
   margin: 0;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  overflow-y: hidden; }
   body a {
     text-decoration: none;
     color: #007BFF; }
@@ -104,43 +106,82 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 40px;
+    background-color: #3A606E;
+    box-shadow: 0 0 6px 6px rgba(0, 0, 0, 0.2);
+    z-index: 10;
+    padding: 10px;
+    max-height: 48px;
     max-width: 100vw; }
+    body div.top-bar a.menu-toggle {
+      visibility: visible; }
+      @media only screen and (min-width: 576px) {
+        body div.top-bar a.menu-toggle {
+          visibility: hidden; } }
   body div.page-wrapper {
     display: flex;
-    flex-direction: row; }
+    flex-direction: row;
+    min-height: calc(100vh - 48px);
+    max-height: calc(100vh - 48px); }
     body div.page-wrapper div#menu-wrapper {
-      flex-grow: 1;
       visibility: hidden;
       position: absolute;
       top: 0;
       left: 0;
       display: flex;
+      flex-grow: 1;
       flex-direction: column;
       z-index: 100;
       padding: 10px;
       width: calc(100% - 20px);
       min-height: calc(100vh - 20px);
-      background-color: #3d3d3d; }
+      max-height: calc(100vh + 48px);
+      overflow-y: auto;
+      background-color: #60787D; }
       @media only screen and (min-width: 576px) {
         body div.page-wrapper div#menu-wrapper {
+          z-index: 0;
           visibility: visible;
           position: relative;
+          min-height: calc(100vh - 48px - 20px);
           max-width: 200px; } }
       body div.page-wrapper div#menu-wrapper.active {
         visibility: visible; }
-        body div.page-wrapper div#menu-wrapper.active > a.menu-toggle {
+        body div.page-wrapper div#menu-wrapper.active a.menu-toggle {
           visibility: visible; }
           @media only screen and (min-width: 576px) {
-            body div.page-wrapper div#menu-wrapper.active > a.menu-toggle {
+            body div.page-wrapper div#menu-wrapper.active a.menu-toggle {
               visibility: hidden; } }
-      body div.page-wrapper div#menu-wrapper > a.menu-toggle {
+      body div.page-wrapper div#menu-wrapper a.menu-toggle {
         visibility: hidden; }
       body div.page-wrapper div#menu-wrapper div.menu-header {
         display: flex;
         flex-direction: row;
         justify-content: space-between; }
-    body div.page-wrapper div.admin-page {
+      body div.page-wrapper div#menu-wrapper ul.admin-menu {
+        display: flex;
+        flex-direction: column;
+        list-style-type: none;
+        padding: 0; }
+        body div.page-wrapper div#menu-wrapper ul.admin-menu li.has-dropdown {
+          cursor: pointer; }
+          body div.page-wrapper div#menu-wrapper ul.admin-menu li.has-dropdown ul.dropdown li {
+            display: none; }
+          body div.page-wrapper div#menu-wrapper ul.admin-menu li.has-dropdown ul.dropdown.expanded li {
+            display: block; }
+        body div.page-wrapper div#menu-wrapper ul.admin-menu * {
+          text-align: left; }
+        body div.page-wrapper div#menu-wrapper ul.admin-menu li ul {
+          list-style-type: none; }
+          body div.page-wrapper div#menu-wrapper ul.admin-menu li ul li {
+            float: left; }
+    body div.page-wrapper div.admin-page-wrapper {
+      padding: 15px;
+      overflow-y: auto;
       background-color: rgba(166, 166, 166, 0.76);
       flex-grow: 2;
-      max-width: 100%; }
+      display: flex;
+      justify-content: center;
+      height: calc(100vh - 48px - 30px); }
+      body div.page-wrapper div.admin-page-wrapper div.admin-page {
+        max-width: 1000px;
+        width: 100%; }
